Remove annoying MathJax progress report

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-88753319-1', 'auto');
+ga('create', 'UA-88753319-2', 'auto');
 ga('send', 'pageview');
 </script>
 
@@ -117,7 +117,9 @@ ga('send', 'pageview');
 
         <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
+          messageStyle: 'none',
           tex2jax: {
+            preview: 'none',
             inlineMath: [['$','$'], ['\\(','\\)']],
             displayMath: [['$$','$$'], ['\[','\]']],
             processEscapes: true,
