--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@ ga('send', 'pageview');
             <p>DIY electronics, embedded software, and productivity tools</p>
         </header>
     
-    <p class="error">Oh, this page does not exist. You can head back to <a href="https://shanemakes.github.io/">homepage</a>.</p>
+    <p class="error">Golly gee whillikers, Batman--this page does not exist! Looks like we'll need to return to the <a href="https://shanemakes.github.io/">Batcave</a>.</p>
 </div>
 
             </div>
@@ -142,3 +142,4 @@ ga('send', 'pageview');
         </script>
     </body>
 </html>
+
