mdash in 404 page

--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@ ga('send', 'pageview');
             <p>DIY electronics, embedded software, and productivity tools</p>
         </header>
     
-    <p class="error">Golly gee willikers, Batman&dash;this page does not exist! Looks like we'll need to return to the <a href="https://shanemakes.github.io/">Batcave</a>.</p>
+    <p class="error">Golly gee willikers, Batman&mdash;this page does not exist! Looks like we'll need to return to the <a href="https://shanemakes.github.io/">Batcave</a>.</p>
 </div>
 
             </div>
